--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 baseurl = "https://shenweiyan.github.io/ICS-Hugo-Theme/"
 RelativeURLs=true
 CanonifyURLs=true
-languageCode = "zh-cmn-Hans"	                  # html的lang属性值
-DefaultContentLanguage = "zh-cmn-Hans"   	  # 默认内容语言用于选择i18n语言模板
+languageCode = "zh-cn"	                  # html的lang属性值
+DefaultContentLanguage = "zh-cn"   	  # 默认内容语言用于选择i18n语言模板
 title = "Steven Shen | 沈维燕"
 theme = "hugo-ivy"
 #googleAnalytics = "UA-112592341-1"
@@ -76,7 +76,7 @@ publishDir = "docs"
     description = "Welcome to the blog site of Steven Shen."
     disqusURL = "https://shenweiyan.github.io/home/"
     customJS = ["js/fix-toc.js", "js/center-img.js", "js/right-quote.js", "js/no-highlight.js", "js/fix-footnote.js", "js/math-code.js", "js/external-link.js", "js/alt-title.js", "js/header-link.js", "js/dom-scripts.js"]
-    githubContentURL = "https://github.com/shenweiyan/ICS-Hugo-Theme/edit/master/content/"
+    githubContentURL = "https://github.com/shenweiyan/ICS-Hugo-Theme/edit/main/content/"
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.12.0"
     highlightjsLang = ["r", "yaml", "tex"]
