--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -72,18 +72,15 @@ publishDir = "docs"
 
 
 [params]
-    siteurl = "https://shenweiyan.github.io/ICS-Hugo-Theme/"
+    siteurl     = "https://shenweiyan.github.io/ICS-Hugo-Theme/"
     description = "Welcome to the blog site of Steven Shen."
-    disqusURL = "https://shenweiyan.github.io/home/"
-    customJS = ["js/fix-toc.js", "js/center-img.js", "js/right-quote.js", "js/no-highlight.js", "js/fix-footnote.js", "js/math-code.js", "js/external-link.js", "js/alt-title.js", "js/header-link.js", "js/dom-scripts.js"]
+    disqusURL   = "https://shenweiyan.github.io/home/"
+    customJS    = []
     githubContentURL = "https://github.com/shenweiyan/ICS-Hugo-Theme/edit/main/content/"
-    # options for highlight.js (version, additional languages, and theme)
-    highlightjsVersion = "9.12.0"
-    highlightjsLang = ["r", "yaml", "tex", "shell"]
-    highlightjsCDN = "//cdn.bootcss.com"
-    highlightjsTheme = "github"
-    dateFormat = "2019-01-01" # "2019-01-01, Mon, "
+    highlightjsTheme = "https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.3.1/build/styles/github.min.css"
+    dateFormat  = "2019-01-01"	# "2019-01-01, Mon, "
     loadTypekit = false
+    recentPosts = false    	#首页最近更新文章
 
 [params.footer]
     copyright = "<br/><br/>&copy; Powered by [ICS-Hugo-Theme](https://github.com/shenweiyan/ICS-Hugo-Theme) and [Hugo](https://gohugo.io) | [Bio IT 爱好者](https://www.bioitee.com/) 2018 - {year} | [粤ICP备16023717号](http://beian.miit.gov.cn/)<br/>"
