--- a/.github/workflows/HugoAction.yml
+++ b/.github/workflows/HugoAction.yml
@@ -7,17 +7,17 @@ on:
 
 jobs:
   deploy: 
-    runs-on: ubuntu-20.04 	# 在什么环境运行任务
+    runs-on: ubuntu-latest 	    # 在什么环境运行任务
     steps:
       - uses: actions/checkout@v4   # 引用 actions/checkout 这个 action，与所在的 github 仓库同名
         with:
          submodules: false  # Fetch Hugo themes (true OR recursive) 获取 submodule 主题
-         fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+         fetch-depth: 0     # Fetch all history for .GitInfo and .Lastmod
          
-      - name: Setup Hugo	# 步骤名自取
-        uses: peaceiris/actions-hugo@v2   # Hugo 官方提供的 action，用于在任务环境中获取 hugo
+      - name: Setup Hugo	          # 步骤名自取
+        uses: peaceiris/actions-hugo@v3   # Hugo 官方提供的 action，用于在任务环境中获取 hugo
         with:
-          hugo-version: '0.89.4'	# 获取指定版本的 hugo
+          hugo-version: '0.147.6'	  # 获取指定版本的 hugo
           extended: false
 
       - name: Build Site
@@ -30,7 +30,7 @@ jobs:
       - name: Install nodejs
         uses: actions/setup-node@v4
         with:
-          node-version: 18
+          node-version: 24
       - run: npm i pagefind
       - run: npx pagefind --source public --bundle-dir search
           
